tests/ui/edge_cases/invalid_ident.stderr
error: cast failed: invalid identifier `3`
 --> tests/ui/edge_cases/invalid_ident.rs:5:8
  |
5 |        ident("3")
  |        ^^^^^
