tests/ui/edge_cases/invalid_ident.rs
use metamatch::eval;

fn main() {
    eval! {
       ident("3")
    }
}
